compiler/testData/diagnostics/tests/regressions/ea43298.kt
// FIR_IDENTICAL
import A.<!SYNTAX!><!>;

class A
